Fix FieldGroup component spacings and more smooth layout #PL-2041

--- a/modules/web/themes/havana/components/fieldgrouplayout/fieldgrouplayout.scss
+++ b/modules/web/themes/havana/components/fieldgrouplayout/fieldgrouplayout.scss
@@ -9,7 +9,7 @@
   @include base-gridlayout($primaryStyleName);
 
   .#{$primaryStyleName}-spacing-on {
-    padding-left: 4px;
+    padding-left: 8px;
     padding-top: 4px;
   }
 
